# DIANA_Clustering

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/: DIvisiveANAlysis.py  __init__.py  calculate_similarity.py  distance_matrix.py
test/: test_funcs.py
test/data/: HAYES_ROTH_Modified.csv  example_classes.npy  example_simmilarity.npy  example_test_classes.npy
utils/: __init__.py  calculate_similarity.py  delete_cache.py  distance_matrix.py
