[project]
name = "diana-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "ty>=0.0.1a19",
]
