[project]
name = "diana-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "platformdirs>=4.3.8",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
